# unity-chronicles

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLEANUP_TOOLS.md  CMakeLists.txt  COMPILATION_FIX_SUMMARY.md  COMPLETE_GAME_LOOP_ANALYSIS.md  CONVERSION_SUMMARY.md  CRITICAL_FIX_CANNOT_PLAY.md  ChroniclesOfADrifter.sln  DRAWSPRITE_IMPLEMENTATION.md  FIX_SUMMARY.md  HOW_TO_PLAY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_DRAWSPRITE.md  IMPLEMENTATION_MAP_EDITOR.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_COMPLETE_GAME_LOOP.md  IMPLEMENTATION_SUMMARY_DX11.md  IMPLEMENTATION_SUMMARY_DX12.md  ISSUE_RESOLUTION_SUMMARY.md  LICENSE  MAP_EDITOR_QUICKREF.md  PACKAGE_UPDATE_NOTES.md  PLACEHOLDER_ASSETS.md  PROJECT_STATUS.md  PROJECT_STATUS_UNITY.md  QUICKREF.md  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  README_UNITY.md  ROADMAP.md  SOLUTION_APPLIED.md  SOLUTION_SUMMARY.md  TASK_COMPLETE.md  TASK_COMPLETION_CHECKLIST.md  TASK_COMPLETION_FINAL.md  TASK_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  TILETEMPLATE_BUG_EXPLANATION.md  (+20 more)
Assets/Scenes/: MainScene.unity
Assets/ScriptableObjects/Crops/: Crop_Carrot.asset  Crop_Potato.asset  Crop_Tomato.asset  Crop_Wheat.asset
Assets/ScriptableObjects/NPCs/: NPC_Bob_Farmer.asset  NPC_Marcus_Blacksmith.asset  NPC_Sarah_Merchant.asset
Assets/ScriptableObjects/Recipes/: Recipe_BasicChest.asset  Recipe_StoneBlock.asset  Recipe_WoodPlank.asset
Assets/ScriptableObjects/Tools/: Tool_Axe.asset  Tool_Hoe.asset  Tool_Pickaxe.asset  Tool_Scythe.asset  Tool_Sword.asset  Tool_WateringCan.asset
Assets/Scripts/: GameConstants.cs  GameManager.cs
Assets/Scripts/Components/: CameraFollow.cs  EnemyAI.cs  Health.cs  Inventory.cs  PlayerController.cs
Assets/Scripts/Crafting/: CraftingManager.cs  CraftingRecipe.cs
Assets/Scripts/Editor/: PlaceholderAssetGenerator.cs
Assets/Scripts/Farming/: CropData.cs  FarmingManager.cs  PlantedCrop.cs
Assets/Scripts/NPC/: NPCData.cs
Assets/Scripts/Save/: SaveLoadManager.cs
Assets/Scripts/Time/: TimeManager.cs
Assets/Scripts/Tools/: ToolData.cs
ProjectSettings/: InputManager.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset
assets/: README.md
assets/maps/: README.md  example_small_area.json
assets/tilesets/: README.md  dungeon.json  nature.json  zelda_style.json
docs/: ADVANCED_CAMERA_FEATURES.md  ANIMATION_SYSTEM.md  ARCHITECTURE.md  BUILD_SETUP.md  CAMERA_FEATURES.md  CAMERA_SYSTEM.md  CINEMATIC_CAMERA.md  COLLISION_SYSTEM.md  CPP_CSHARP_INTEGRATION.md  CRAFTING_SYSTEM.md  DEVELOPMENT_UPDATE.md  DIRECTX11_RENDERER.md  DIRECTX12_RENDERER.md  ECS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LIGHTING_SYSTEM.md  LUA_SCRIPTING.md  MAP_EDITOR.md  MINING_BUILDING_SYSTEM.md  PERSPECTIVE_RENDERING.md  PROCEDURAL_GENERATION.md  QA.md  SCALE_REFERENCE.md  SETTINGS_SYSTEM.md  SPRITE_ASSETS.md  SWIMMING_MECHANICS.md  TERRAIN_GENERATION.md  UI_FRAMEWORK.md  VEGETATION_SYSTEM.md  VISUAL_GUI_IMPLEMENTATION.md  VS2022_SETUP.md  WATER_SYSTEM.md
src/Engine/: ChroniclesEngine.cpp  ChroniclesEngine.h  ChroniclesEngine.vcxproj  ChroniclesEngine.vcxproj.filters  D3D11Renderer.cpp  D3D11Renderer.h  D3D12Renderer.cpp  D3D12Renderer.h  IRenderer.h  SDL2Renderer.cpp  SDL2Renderer.h
src/Game/: ChroniclesOfADrifter.csproj  GameConstants.cs  Program.cs  TerrainDemoProgram.cs  settings.json
src/Game/ECS/: Entity.cs  (+3 more)
(+131 files in other folders)
